idp manager test and tostring fixes